# stm32_cmake

./: CMakeLists.txt  Makefile  Toolchain_arm_non_eabi.cmake
Core/Inc/: main.h  stm32f2xx_hal_conf.h
Core/Src/: main.c  stm32f2xx_hal_msp.c  syscalls.c
Drivers/STM32F2xx_HAL_Driver/Inc/: stm32f2xx_ll_usb.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
USB_DEVICE/App/: usb_device.h  usbd_desc.c
src/: io_pin.h  user_main.cc
